gvb_interp/src/snapshots/gvb_interp__vm__tests__expr__array.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
print "2"
print "100"
print "6"

