gvb_interp/src/snapshots/gvb_interp__vm__tests__expr__div_by_0.snap
---
source: gvb_interp/src/vm.rs
expression: "run(r#\"\n10 print 1e30/(a-b)\n    \"#.trim(),\n    vec![(exec_error(0, 9, 19, \"除以 0\"), None)])"

---

